# sandbox-mcp

./: .gitignore  CLAUDE.md  Containerfile.mcp-dev  README.md  pyproject.toml  sandbox-ctl  sandbox_mcp_server.py
.github/workflows/: ci.yml
cmd/sandbox-ctl/: go.mod  main.go
cmd/sandbox-vpn/: Package.swift
cmd/sandbox-vpn/Sources/SandboxVPN/: VMBoot.swift  main.swift
cmd/vpn-bridge/: go.mod  main.go
tests/: conftest.py  test_ctl_server.py  test_exact_matching.py  test_helpers.py  test_integration.py  test_mock_container_integration.py  test_spawn.py
