[project]
name = "sandbox-mcp"
version = "1.0.0"
description = "MCP server for Apple Container sandboxes"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.4.1",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["sandbox_mcp_server.py"]

[project.scripts]
sandbox-mcp = "sandbox_mcp_server:main"
